# whisper.cpp

./: .dockerignore  CMakeHelpers.cmake  CMakeLists.txt  Dockerfile  README_myshell.md
fast-whisper/: example.py  requirements.txt  server.py
grpc/: CMakeLists.txt  streaming_common.h  whisper_streaming_client.cc  whisper_streaming_server.cc
grpc/proto/: whisper_streaming.proto
models/: generate-coreml-model.sh
web_demo/: index.html  interaction.js
websocket/: CMakeLists.txt  streaming_common.h  websocket_client.py  websocket_server.cc
